Upload test_BibTeXFile.exe & use bash for testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -114,33 +114,46 @@ jobs:
           cat "$FILE"
         done
 
+    - name: Upload test_BibTeXFile
+      uses: actions/upload-artifact@v2
+      with:
+        name: test_BibTeXFile
+        path: build/test_BibTeXFile.exe
+
     - run: ../build/test_BibTeXFile.exe
       working-directory: testcases
+      shell: bash
 #      shell: msys2 {0}
 
     - run: ../build/test_Document.exe
       working-directory: testcases
+      shell: bash
 #      shell: msys2 {0}
 
     - run: ../build/test_Utils.exe
       working-directory: testcases
+      shell: bash
 #      shell: msys2 {0}
 
     - run: ../build/test_Scripting.exe
       working-directory: testcases
+      shell: bash
 #      shell: msys2 {0}
 
     - run: ../build/test_LuaScripting.exe
       working-directory: testcases
+      shell: bash
 #      shell: msys2 {0}
 
     - run: ../build/test_UI.exe
       working-directory: testcases
+      shell: bash
 #      shell: msys2 {0}
 
     - name: Test
       run: ctest -V
       working-directory: build
+      shell: bash
 #      shell: msys2 {0}
 
     - name: Upload
