--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,6 +68,7 @@ jobs:
       run: |
         pwd
         ls
+        export QT_LOGGING_RULES="*.debug=true"
         ./tst.exe
         echo "OK"
 
