--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
 
   wsl-test:
     runs-on: windows-latest
+    if: false
 
     steps:
     - name: Checkout
@@ -77,7 +78,8 @@ jobs:
   wsl:
     name: WSL
     runs-on: windows-latest
-    if: false
+    env:
+      QT_FORCE_STDERR_LOGGING: 1
 
     steps:
     - name: Checkout
