Set POPPLERDATA_* in WSL script

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,17 +80,8 @@ jobs:
     runs-on: windows-latest
     env:
       QT_FORCE_STDERR_LOGGING: 1
-      POPPLER_DATA_VERSION: "0.4.10"
-      POPPLER_DATA_SUBDIR: "poppler-data-${POPPLER_DATA_VERSION}"
-      POPPLER_DATA_FILE: "poppler-data-${POPPLER_DATA_VERSION}.tar.gz"
-      POPPLER_DATA_URL: "https://poppler.freedesktop.org/${POPPLER_DATA_FILE}"
-      POPPLERDATA_SHA256: "6e2fcef66ec8c44625f94292ccf8af9f1d918b410d5aa69c274ce67387967b30"
 
     steps:
-    - run: echo "${POPPLER_DATA_URL}"
-      shell: bash
-
-
     - name: Checkout
       uses: actions/checkout@v2
 
@@ -105,9 +96,6 @@ jobs:
 #        update: true
         additional-packages: apt-transport-https ca-certificates dirmngr
 # software-properties-common for add-apt-repository
-
-    - run: echo "${POPPLER_DATA_URL}"
-      shell: wsl-bash {0}
 
     - name: Install Dependencies
       shell: wsl-bash {0}
@@ -162,6 +150,11 @@ jobs:
       shell: wsl-bash {0}
       run: |
         echo "::group::Fetch poppler-data"
+        POPPLERDATA_VERSION="0.4.10"
+        POPPLERDATA_SUBDIR="poppler-data-${POPPLER_DATA_VERSION}"
+        POPPLERDATA_FILE="poppler-data-${POPPLER_DATA_VERSION}.tar.gz"
+        POPPLERDATA_URL="https://poppler.freedesktop.org/${POPPLER_DATA_FILE}"
+        POPPLERDATA_SHA256="6e2fcef66ec8c44625f94292ccf8af9f1d918b410d5aa69c274ce67387967b30"
         wget "${POPPLER_DATA_URL}"
         CHKSUM=$(openssl dgst -sha256 "${POPPLERDATA_FILE}" 2> /dev/null)
         if [ "${CHKSUM}" != "SHA256(${POPPLERDATA_FILE})= ${POPPLERDATA_SHA256}" ]; then
