--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
         additional-packages: apt-transport-https ca-certificates dirmngr
 
     # DEBUG
-    - shell: wsl-bash
+    - shell: wsl-bash {0}
       run: |
         echo "::group::Determine version info"
         TW_VERSION=$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)
