--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,6 +92,9 @@ jobs:
     - shell: wsl-bash {0}
       run: |
         echo "::group::Determine version info"
+        cat src/TWVersion.h
+        sed -ne 's,^#define TEXWORKS_VERSION,XXX,p' src/TWVersion.h
+        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h
         TW_VERSION=$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)
         echo "TW_VERSION = ${TW_VERSION}"
         GIT_HASH=$(git --git-dir=".git" show --no-patch --pretty="%h")
