--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -97,8 +97,14 @@ jobs:
         echo "1"
         sed -ne 's,^#define TEXWORKS_VERSION[[:space:]],XXX,p' src/TWVersion.h
         echo "2"
-        sed -ne 's,^#define TEXWORKS_VERSION\s,XXX,p' src/TWVersion.h
+        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"[0-9.],XXX,p' src/TWVersion.h
         echo "3"
+        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\),XXX,p' src/TWVersion.h
+        echo "4"
+        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"([0-9.]),XXX,p' src/TWVersion.h
+        echo "5"
+        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)"$!\1!p' src/TWVersion.h
+        echo "6"
         sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h
         TW_VERSION=$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)
         echo "TW_VERSION = ${TW_VERSION}"
