--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,13 +106,13 @@ jobs:
         echo "5"
         sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\),\1,p' src/TWVersion.h
         echo "6"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)"$!\1!p' src/TWVersion.h
+        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)!\1!p' src/TWVersion.h
         echo "7"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]{3,}\)"$!\1!p' src/TWVersion.h
+        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]{3,}\)!\1!p' src/TWVersion.h
         echo "8"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\)"$!\1!p' src/TWVersion.h
+        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\)!\1!p' src/TWVersion.h
         echo "9"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\)"$!\1!p' src/TWVersion.h
+        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\)!\1!p' src/TWVersion.h
         echo "10"
         TW_VERSION=$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)
         echo "TW_VERSION = ${TW_VERSION}"
