--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,31 +94,31 @@ jobs:
         echo "::group::Determine version info"
         cat src/TWVersion.h
         sed --version
-        sed -ne 's,^#define TEXWORKS_VERSION,XXX,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION,XXX,p' src/TWVersion.h
         echo "1"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]],XXX,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]],XXX,p' src/TWVersion.h
         echo "2"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"[0-9.],XXX,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"[0-9.],XXX,p' src/TWVersion.h
         echo "3"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\),XXX,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\),XXX,p' src/TWVersion.h
         echo "4"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"([0-9.]),XXX,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"([0-9.]),XXX,p' src/TWVersion.h
         echo "5"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\),\1,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\),\1,p' src/TWVersion.h
         echo "6"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)!\1!p' src/TWVersion.h
+        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)!\1!p' src/TWVersion.h
         echo "7"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]{3,}\)!\1!p' src/TWVersion.h
+        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]{3,}\)!\1!p' src/TWVersion.h
         echo "8"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\)!\1!p' src/TWVersion.h
+        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\)!\1!p' src/TWVersion.h
         echo "9"
-        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\)!\1!p' src/TWVersion.h
+        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\)"$!\1!p' src/TWVersion.h
         echo "10"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\),\1,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\),\1,p' src/TWVersion.h
         echo "11"
-        sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\),\1,p' src/TWVersion.h
+        sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\),\1,p' src/TWVersion.h
         echo "12"
-        TW_VERSION=$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)
+        TW_VERSION=$(sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)
         echo "TW_VERSION = ${TW_VERSION}"
         GIT_HASH=$(git --git-dir=".git" show --no-patch --pretty="%h")
         echo "GIT_HASH = ${GIT_HASH}"
