new sed attempt with !

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,6 +94,9 @@ jobs:
         echo "::group::Determine version info"
         cat src/TWVersion.h
         sed --version
+        echo "a"
+        sed -ne 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)"$!\1!p' src/TWVersion.h
+        echo "b"
         sed -nEe 's,^#define TEXWORKS_VERSION,XXX,p' src/TWVersion.h
         echo "1"
         sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]],XXX,p' src/TWVersion.h
