--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,10 +118,11 @@ jobs:
         sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"([0-9.]{3,})!\1!p' src/TWVersion.h
         #sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]{3,}\)!\1!p' src/TWVersion.h
         echo "8"
-        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"([0-9.]\{3,\})!\1!,p' src/TWVersion.h
+        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"([0-9.]{3,})"!\1!p' src/TWVersion.h
         #sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\)!\1!p' src/TWVersion.h
         echo "9"
         #sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\)"$!\1!p' src/TWVersion.h
+        sed -nEe 's!^#define TEXWORKS_VERSION[[:space:]]"([0-9.]{3,})"$!\1!p' src/TWVersion.h
         echo "10"
         #sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]+\),\1,p' src/TWVersion.h
         echo "11"
