--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -134,7 +134,7 @@ jobs:
         #echo "11"
         ##sed -nEe 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\+\),\1,p' src/TWVersion.h
         #echo "12"
-        TW_VERSION=$(sed -nEe 's/^#define TEXWORKS_VERSION[[:space:]]"([0-9.]{3,})"$/\1/p' src/TWVersion.h)
+        TW_VERSION=$(sed -ne 's/^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)"[[:space:]]*$/\1/p' src/TWVersion.h)
         echo "TW_VERSION = ${TW_VERSION}"
         GIT_HASH=$(git --git-dir=".git" show --no-patch --pretty="%h")
         echo "GIT_HASH = ${GIT_HASH}"
@@ -195,7 +195,8 @@ jobs:
         TOPDIR=$(pwd)
 
         echo "::group::Determine version info"
-        TW_VERSION=$(sed -nEe 's/^#define TEXWORKS_VERSION[[:space:]]"([0-9.]{3,})"$/\1/p' src/TWVersion.h)
+        # NB: On Windows, there might be a stray \r at the end!
+        TW_VERSION=$(sed -ne 's/^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3,\}\)"[[:space:]]*$/\1/p' src/TWVersion.h)
         echo "TW_VERSION = ${TW_VERSION}"
         GIT_HASH=$(git --git-dir=".git" show --no-patch --pretty="%h")
         echo "GIT_HASH = ${GIT_HASH}"
