--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,7 +84,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup
-      uses: .github/actions/setup-windows
+      uses: ./.github/actions/setup-windows
 
     - name: Configure
       shell: wsl-bash {0}
@@ -106,7 +106,7 @@ jobs:
       working-directory: build
 
     - name: Package
-      uses: .github/actions/package-windows
+      uses: ./.github/actions/package-windows
       id: package
 
     - name: Prepare testing
